# market-intel

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: collect.yml
collectors/: base.py  google_news_collector.py  reddit_collector.py  rss_collector.py
config/: loader.py
core/: config_loader.py  container.py  logger.py  models.py  retry.py
processors/: analytics_engine.py  base.py  decision_engine.py  dedup.py  enrich.py  execution_engine.py  learning_engine.py
reports/: base.py  decision_report.py  markdown_report.py
scripts/: smoke_test.py
storage/: base.py  json_store.py
tests/: test_models.py  test_phase4.py  test_processors.py  test_storage.py
workflows/: daily_run.py
