[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intel"
version = "0.1.0"
description = "Autonomous marketing intelligence engine — collectors, processors, and reports."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Marwan Naili"}]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
